--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ main h2 {
 /* Add Student Styles Below */
 .jane-style {
     color: cyan;
-    background-color: black;
+    background-color: rgb(236, 93, 217);
     padding: 3px;
 }
 
